# LibAML

./: .gitignore  CMakeLists.txt  Debug.cpp  DefinitionBlockHeader.h  Opcodes.cpp  Opcodes.h  Parser.cpp  Parser.h  main.cpp
Data/: simple.aml  simple.dsl  test.aml  test.dsl
Documentation/: Format.md  Opcodes.md
Elements/: Acquire.cpp  Acquire.h  Add.cpp  Add.h  And.cpp  And.h  ArgObject.cpp  ArgObject.h  Break.cpp  Break.h  BreakPoint.cpp  BreakPoint.h  Buffer.cpp  Buffer.h  Concat.cpp  Concat.h  ConcatRes.cpp  ConcatRes.h  CondRefOf.cpp  CondRefOf.h  Continue.cpp  Continue.h  CopyObject.cpp  CopyObject.h  Data.cpp  Data.h  DataContainer.cpp  DataContainer.h  Decrement.cpp  Decrement.h  DefinitionBlock.cpp  DefinitionBlock.h  DerefOf.cpp  DerefOf.h  Device.cpp  Device.h  Divide.cpp  Divide.h  Element.cpp  Element.h  (+122 more)
Generator/: expression_opcodes.json  generate.py  namespace_modifiers.json  opcodes.json  opcodes.py  output.cpp
Parsers/: ArgObject.cpp  BCDValue.cpp  BufData.cpp  BuffPkgStrObj.cpp  BufferSize.cpp  ByteList.cpp  CMakeLists.txt  Data.cpp  DataRefObject.cpp  DebugObj.cpp  DefAcquire.cpp  DefAdd.cpp  DefAnd.cpp  DefBreak.cpp  DefBreakPoint.cpp  DefBuffer.cpp  DefConcat.cpp  DefConcatRes.cpp  DefCondRefOf.cpp  DefContinue.cpp  DefCopyObject.cpp  DefDecrement.cpp  DefDerefOf.cpp  DefDevice.cpp  DefDivide.cpp  DefElse.cpp  DefFatal.cpp  DefFindSetLeftBit.cpp  DefFindSetRightBit.cpp  DefFromBCD.cpp  DefIfElse.cpp  DefIncrement.cpp  DefIndex.cpp  DefLAnd.cpp  DefLEqual.cpp  DefLGreater.cpp  DefLGreaterEqual.cpp  DefLLess.cpp  DefLLessEqual.cpp  DefLNot.cpp  (+75 more)
