cmake_minimum_required(VERSION 3.21)
project(LibAML)

set(CMAKE_CXX_STANDARD 20)

find_package(fmt)
link_libraries(fmt-header-only)

set(ELEMENTS
        Elements/Acquire.cpp
        Elements/Acquire.h
        Elements/Add.cpp
        Elements/Add.h
        Elements/And.cpp
        Elements/And.h
        Elements/Buffer.cpp
        Elements/Buffer.h
        Elements/Concat.cpp
        Elements/Concat.h
        Elements/ConcatRes.cpp
        Elements/ConcatRes.h
        Elements/CondRefOf.cpp
        Elements/CondRefOf.h
        Elements/CopyObject.cpp
        Elements/CopyObject.h
        Elements/DataContainer.cpp
        Elements/DataContainer.h
        Elements/Data.cpp
        Elements/Data.h
        Elements/Decrement.cpp
        Elements/Decrement.h
        Elements/DefinitionBlock.cpp
        Elements/DefinitionBlock.h
        Elements/DerefOf.cpp
        Elements/DerefOf.h
        Elements/Device.cpp
        Elements/Device.h
        Elements/Divide.cpp
        Elements/Divide.h
        Elements/Element.cpp
        Elements/Element.h
        Elements/Elements.h
        Elements/ElementTypes.h
        Elements/FindSetLeftBit.cpp
        Elements/FindSetLeftBit.h
        Elements/FindSetRightBit.cpp
        Elements/FindSetRightBit.h
        Elements/FromBcd.cpp
        Elements/FromBcd.h
        Elements/Increment.cpp
        Elements/Increment.h
        Elements/Index.cpp
        Elements/Index.h
        Elements/LAnd.cpp
        Elements/LAnd.h
        Elements/LEqual.cpp
        Elements/LEqual.h
        Elements/LGreater.cpp
        Elements/LGreaterEqual.cpp
        Elements/LGreaterEqual.h
        Elements/LGreater.h
        Elements/LLess.cpp
        Elements/LLessEqual.cpp
        Elements/LLessEqual.h
        Elements/LLess.h
        Elements/LNot.cpp
        Elements/LNotEqual.cpp
        Elements/LNotEqual.h
        Elements/LNot.h
        Elements/Load.cpp
        Elements/Load.h
        Elements/LoadTable.cpp
        Elements/LoadTable.h
        Elements/LOr.cpp
        Elements/LOr.h
        Elements/Match.cpp
        Elements/Match.h
        Elements/Method.cpp
        Elements/Method.h
        Elements/Mid.cpp
        Elements/Mid.h
        Elements/Mod.cpp
        Elements/Mod.h
        Elements/Multiply.cpp
        Elements/Multiply.h
        Elements/Name.cpp
        Elements/Name.h
        Elements/NameString.cpp
        Elements/NameString.h
        Elements/NAnd.cpp
        Elements/NAnd.h
        Elements/NOr.cpp
        Elements/NOr.h
        Elements/Not.cpp
        Elements/Not.h
        Elements/ObjectType.cpp
        Elements/ObjectType.h
        Elements/Or.cpp
        Elements/Or.h
        Elements/Package.cpp
        Elements/Package.h
        Elements/RefOf.cpp
        Elements/RefOf.h
        Elements/Return.cpp
        Elements/Return.h
        Elements/Scope.cpp
        Elements/Scope.h
        Elements/ShiftLeft.cpp
        Elements/ShiftLeft.h
        Elements/ShiftRight.cpp
        Elements/ShiftRight.h
        Elements/SizeOf.cpp
        Elements/SizeOf.h
        Elements/Store.cpp
        Elements/Store.h
        Elements/Subtract.cpp
        Elements/Subtract.h
        Elements/TermArg.cpp
        Elements/TermArg.h
        Elements/Timer.cpp
        Elements/Timer.h
        Elements/ToBcd.cpp
        Elements/ToBcd.h
        Elements/ToBuffer.cpp
        Elements/ToBuffer.h
        Elements/ToDecimalString.cpp
        Elements/ToDecimalString.h
        Elements/ToHexString.cpp
        Elements/ToHexString.h
        Elements/ToInteger.cpp
        Elements/ToInteger.h
        Elements/ToString.cpp
        Elements/ToString.h
        Elements/VarPackage.cpp
        Elements/VarPackage.h
        Elements/Wait.cpp
        Elements/Wait.h
        Elements/Xor.cpp
        Elements/Xor.h
        )


set(LIBRARY
        Library/Error.h
        Library/Result.h
        Library/Types.h
        Library/Optional.h
        Library/StringView.h
        Library/Try.h
        Library/ByteReader.cpp
        Library/ByteReader.h
        )

add_executable(LibAML ${LIBRARY} ${ELEMENTS}
        main.cpp
        DefinitionBlockHeader.h
        Parser.cpp
        Parser.h
        Opcodes.h
        Opcodes.cpp
        Debug.cpp
        )
